# optimization-panel

./: design.ui  pyproject.toml  resource.qrc  ui_design.py
coding/: Window.py  main.py  resource_rc.py  ui_design.py
coding/executaveis/: Desativar_Windows_Update.bat  Otimização.bat
coding/regs/: Acelerando o Menu iniciar.reg
